# nhl-data-pipeline

./: .env.example  .gitignore  DATACAMP_INTEGRATION_PLAN.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: _marts.yml  mart_goalie_rankings.sql  mart_player_season_stats.sql  mart_team_standings.sql
dbt/models/staging/: _staging.yml  stg_games.sql  stg_goalie_stats.sql  stg_players.sql  stg_skater_stats.sql
dbt/seeds/: teams.csv
docs/: schema-design.md  snowflake-vs-postgres.md
sql/: schema.sql  seed.sql  snowflake_schema.sql  snowflake_seed.sql
src/analysis/: game_environment.py  slate_builder.py
src/dashboard/: app.py  slate_breakdown.py
src/extract/: daily_faceoff.py  natural_stat_trick.py  nhl_api.py  odds_api.py  parse.py  utils.py
src/load/: base.py  postgres.py  snowflake.py
src/models/: __init__.py  game.py  player.py  slate.py  stats.py  team.py
src/pipeline/: enrich.py  run.py
src/transform/: clean.py  metrics.py  normalize.py  pipeline.py
tests/: test_daily_faceoff.py  test_extract.py  test_game_environment.py  test_load.py  test_metrics.py  test_nst.py  test_odds.py  test_transform.py
